--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.fr.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.fr.resx
@@ -1068,4 +1068,15 @@ Normalement, lors de la nouvelle analyse, tous les fichiers de données du robot
     <value>Si cette option est désactivée, les limites de débit configurées dans les paramètres seront strictement 
 respectées, ce qui peut entraîner un rejet par le serveur. Cette action est à vos risques et périls.</value>
   </data>
+  <data name="LoadAllDatabasesIntoDb" xml:space="preserve">
+    <value>charger dans la base de données globale au lieu de la mémoire</value>
+  </data>
+  <data name="ToolTipLoadAllDatabasesIntoDbDescription" xml:space="preserve">
+    <value>Cette option ne peut être activée que si la vérification globale est activée.
+Elle est utile si vous utilisez la vérification globale et avez déjà téléchargé un grand nombre de fichiers.
+L'activation de cette option réduit l'utilisation de la mémoire, car toutes les bases de données de blog ne sont pas conservées en mémoire.</value>
+  </data>
+  <data name="ToolTipLoadAllDatabasesIntoDb" xml:space="preserve">
+    <value>Charger les bases de données de blog dans une base de données globale au lieu de la mémoire</value>
+  </data>
 </root>
