--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
@@ -1321,6 +1321,7 @@ which may result in rejection by the server. This is done at your own risk.</val
   <data name="ToolTipLoadAllDatabasesIntoDbDescription" xml:space="preserve">
     <value>This option can only be enabled if the global check is enabled.
 It is useful if you are using the global check and have already downloaded a large number of files.
-Enabling this option reduces memory usage because not all blog databases are kept in memory.</value>
+Enabling this option reduces memory usage because not all blog databases are kept in memory.
+This option will take effect after restarting the program. The first start after activation may take slightly longer than usual.</value>
   </data>
 </root>
